# Aether_Reversal_Engine

./: .gitignore  AetherRE.code-workspace  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
analysis/: analyze_call_graph.py
capture/: frida_texture_hook.py
cli/: ui.py
docs/: ARCHITECTURE.md  Diff_Report.md  FACTORY_RULES.md  INDEX.md  README.md  RELEASE_CHECKLIST.md  TARGET_TEMPLATE.md  texture_pipeline.md
docs/ui/: RECTPACK_V1.md
dynamic_headers/: AppKit.h  Cocoa.h  CoreFoundation.h  CoreServices.h  Foundation.h  libSystem.B.dylib.h  libobjc.A.dylib.h  ni_common_types.h
factory/core/: __init__.py  asset_extractor.py  asset_extractor_v2.py  bootstrap.py  build_system.py  bundle_inventory.py  cpp_reconstructor.py  dynamic_header_generator.py  encryption_analyzer.py  frida_engine.py  ghidra_engine.py  header_generator.py  macho_discovery.py  nib_parser.py  progress.py  reporting.py  target_layout.py  verifier.py
factory/ghidra_scripts/: ExportEverything.java  ExtractTextureAtlas.java
fixup/: add_common_types.py  analyze_errors.py  fix_decompilation_issues.py  fix_ghidra_issues.py  fix_missing_parameters.py  fix_missing_parameters_v2.py  fix_simple_params.py
schemas/: bundle_index.v1.json  extraction_index.v1.json  manifest.v1.json  nib_sidecar.v1.json  targets_index.v1.json
scripts/: analyze_sniff_jsonl.py  check_docs.sh  check_texture_parity.py  create_function_hashes.py  extract_arkaos_results.py  extract_config_data.py  extract_deep_assets.py  extract_lua_api.py  extract_mididesigner.py  extract_protocol_strings.py  extract_touchosc.py  generate_docs.py  generate_package_freeze.py  ingest_target.py  lint_docs.sh  lint_markdown_links.py  macho_vtable_slot.py  publish_sanity_check.sh  reconstruct_textures.py  stamp_markdown_timestamps.py  test_mapping_flow.py  triage_fast.py  triage_module.py  update_target_index.py  verify_logic_headless.sh  verify_mapping.py  verify_repo_safety.sh  watch_reverse_progress.py
targets/: INDEX.json  README.md
targets/3Vial OS.exe/: AGENTS.md  MANIFEST.json
targets/Analog Lab V/: AGENTS.md  MANIFEST.json
targets/ArKaos_MediaMaster_6_1_3.dmg/: AGENTS.md
targets/Calculator/: AGENTS.md
targets/Maschine 3/source/: CMakeLists.txt
targets/Maschine 3/source/examples/: example_maschine_studio.cpp
targets/Maschine 3/source/include/ni/: .hpp  AK1.hpp  Application.hpp  ArgFormatter.hpp  AttibuteSelector.hpp  ButtonImpl.hpp  ClientEntry_.hpp  ControllerBase.hpp  DetentRenderer.hpp  Device.hpp  DeviceManager.hpp  DragDropRequestEventData_.hpp  DrawingCache.hpp  FileContainer.hpp  FileContainerParser.hpp  FormatResultStringType.hpp  GP.hpp  HIDDevice.hpp  HWS1.hpp  IMapDeviceNavigationSupport.hpp  IMapStructures.hpp  IPCPort.hpp  IPCServer.hpp  IProperty.hpp  KORE.hpp  KontrolD2.hpp  KontrolF1.hpp  KontrolMK1.hpp  KontrolS2MK1.hpp  KontrolS2MK2.hpp  KontrolS2MK3.hpp  KontrolS3.hpp  KontrolS4MK1.hpp  KontrolS4MK2.hpp  KontrolS4MK3.hpp  KontrolS5.hpp  KontrolS8.hpp  KontrolX1MK1.hpp  KontrolX1MK2.hpp  KontrolX1MK3.hpp  (+116 more)
targets/Maschine 3/source/include/ni/maschine/: HIDReports.hpp  MaschineStudioController.hpp
targets/Maschine 3/source/src/: .cpp  AK1.cpp  Application.cpp  ArgFormatter.cpp  AttibuteSelector.cpp  ButtonImpl.cpp  ClientEntry_.cpp  ControllerBase.cpp  DetentRenderer.cpp  Device.cpp  DeviceManager.cpp  DragDropRequestEventData_.cpp  DrawingCache.cpp  FileContainer.cpp  FileContainerParser.cpp  FormatResultStringType.cpp  GP.cpp  HIDDevice.cpp  HWS1.cpp  IMapDeviceNavigationSupport.cpp  IMapStructures.cpp  IPCPort.cpp  IPCServer.cpp  IProperty.cpp  KORE.cpp  KontrolD2.cpp  KontrolF1.cpp  KontrolMK1.cpp  KontrolS2MK1.cpp  KontrolS2MK2.cpp  KontrolS2MK3.cpp  KontrolS3.cpp  KontrolS4MK1.cpp  KontrolS4MK2.cpp  KontrolS4MK3.cpp  KontrolS5.cpp  KontrolS8.cpp  KontrolX1MK1.cpp  KontrolX1MK2.cpp  KontrolX1MK3.cpp  (+116 more)
targets/Maschine 3/source/src/maschine/: MaschineStudioController.cpp
tests/: test_idempotency_concurrency.py  test_ingest_schemas_and_strict.py  test_realtime_safety.py
tools/atlas_recover/: Cargo.toml
tools/atlas_recover/benches/: throughput.rs
tools/atlas_recover/src/: contact.rs  formats.rs  lib.rs  macho.rs  main.rs  reconstruct.rs
tools/atlas_recover/tests/: parity.rs
(+3564 files in other folders)
