[package]
name        = "atlas_recover"
version     = "0.1.0"
edition     = "2021"
description = "Stage B — raw texture reconstructor for v::TextureAtlas buffers"

[lib]
name    = "atlas_recover"
path    = "src/lib.rs"

[[bin]]
name = "atlas_recover"
path = "src/main.rs"

[dependencies]
anyhow     = "1"
clap       = { version = "4", features = ["derive"] }
half       = "2"                                            # f16 for RGBA16F
image      = { version = "0.25", default-features = false, features = ["png"] }
rayon      = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile  = "3"

[[bench]]
name    = "throughput"
harness = false

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
